# surface-detection-ros

./: .directory  .rosinstall  .rosinstall.bak  README.md
abb/: .directory
abb/abb/: CMakeLists.txt
abb/abb_irb2400_moveit_config/: CMakeLists.txt
abb/abb_irb2400_moveit_plugins/: CMakeLists.txt
abb/abb_irb2400_support/: CMakeLists.txt
abb/abb_irb4400_support/: CMakeLists.txt
abb/abb_irb5400_support/: CMakeLists.txt
abb/abb_irb6600_support/: CMakeLists.txt
abb/abb_irb6640_moveit_config/: CMakeLists.txt
abb/abb_irb6640_support/: CMakeLists.txt
abb/abb_resources/: CMakeLists.txt
descartes/: .directory
descartes/descartes/: CMakeLists.txt
descartes/descartes_core/: CMakeLists.txt
descartes/descartes_core/include/descartes_core/: utils.h
descartes/descartes_moveit/: CMakeLists.txt
descartes/descartes_moveit/include/descartes_moveit/: moveit_state_adapter.h
descartes/descartes_moveit/src/: ikfast_moveit_state_adapter.cpp  moveit_state_adapter.cpp
descartes/descartes_planner/: CMakeLists.txt
descartes/descartes_planner/include/descartes_planner/: planning_graph_edge_policy.h
descartes/descartes_planner/src/: ladder_graph_dag_search.cpp
descartes/descartes_trajectory/: CMakeLists.txt
descartes/descartes_trajectory/src/: cart_trajectory_pt.cpp  joint_trajectory_pt.cpp
descartes/descartes_trajectory/test/: axial_symmetric_pt.cpp  cart_trajectory_pt.cpp  cartesian_robot.cpp
descartes/descartes_trajectory/test/descartes_trajectory_test/: cartesian_robot.h  robot_model_test.hpp
descartes/descartes_utilities/: CMakeLists.txt
descartes/descartes_utilities/src/: ros_conversions.cpp
godel/: .directory
godel/godel/: CMakeLists.txt
godel/godel_msgs/: CMakeLists.txt
godel/godel_param_helpers/: CMakeLists.txt
godel/godel_path_execution/: CMakeLists.txt
godel/godel_plugins/: CMakeLists.txt
godel/godel_polygon_offset/: CMakeLists.txt
godel/godel_process_execution/: CMakeLists.txt
godel/godel_process_path_generation/: CMakeLists.txt
godel/godel_process_planning/: CMakeLists.txt
godel/godel_process_planning/src/: blend_process_planning.cpp  common_utils.cpp  common_utils.h  keyence_process_planning.cpp  path_transitions.cpp  path_transitions.h  trajectory_utils.cpp  trajectory_utils.h
godel/godel_robots/abb/abb_file_suite/: CMakeLists.txt
godel/godel_robots/blending_end_effector/: CMakeLists.txt
godel/godel_scan_analysis/: CMakeLists.txt
godel/godel_simple_gui/: CMakeLists.txt
godel/godel_surface_detection/: CMakeLists.txt
godel/godel_surface_detection/include/detection/: surface_detection.h
godel/godel_surface_detection/include/segmentation/: surface_segmentation.h
godel/godel_surface_detection/include/services/: surface_blending_service.h
godel/godel_utils/: CMakeLists.txt
godel/industrial_robot_simulator_service/: CMakeLists.txt
godel/meshing_plugins/: CMakeLists.txt
godel/meshing_plugins_base/: CMakeLists.txt
godel/path_planning_plugins/: CMakeLists.txt
godel/path_planning_plugins_base/: CMakeLists.txt
godel_openvoronoi/: .directory  README.md
godel_openvoronoi/cpp_examples/polygon/: main.cpp
godel_openvoronoi/python_examples/offset/: offset_1.py
godel_openvoronoi/src/: CMakeLists.txt  package.xml  version_string.cmake
godel_openvoronoi/src/cmake/: godel_openvoronoi-extras.cmake.em
godel_openvoronoi/src/openvoronoi/: offset_sorter.hpp
industrial_core/: .directory
industrial_core/industrial_core/: CMakeLists.txt
keyence_experimental/: .directory
libsocket/: .directory
swri_profiler/: .directory
swri_profiler/swri_profiler/: CMakeLists.txt
swri_profiler/swri_profiler_msgs/: CMakeLists.txt
swri_profiler/swri_profiler_tools/: CMakeLists.txt
(+15 files in other folders)
